# cookiecutter-python

./: .gitattributes  .gitignore  CONTRIBUTING.rst  CONTRIBUTORS.rst  LICENSE  Pipfile  README.rst  cookiecutter.json  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: allow-fail.yml  expected-fail.yml  fail-ok.yml  main.yml  tests.yml
docs/: README.rst
hooks/: post_gen_project.sh
tests/: test_bake_project.py  test_template.py
{{cookiecutter.repo_name}}/: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .travis.yml  AUTHORS.rst  CONTRIBUTORS.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
{{cookiecutter.repo_name}}/.github/workflows/: allow-fail.yml  main.yml  tests.yml
{{cookiecutter.repo_name}}/docs/: .rstcheck.cfg  Makefile  api.rst  conf.py  index.rst
{{cookiecutter.repo_name}}/src/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  _helpers.py  cli.py  exception.py  exceptions.py
{{cookiecutter.repo_name}}/tests/: __init__.py  conftest.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.repo_name}}/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  __version__.py  exceptions.py
