; For setuptools configuration see https://setuptools.readthedocs.io.
[metadata]
name = cookiecutter_python
author = Carlos Meza
author-email = contact@carlosmeza.meza
description  = Meta package for cookiecutter template for Python projects.
description-content-type = text/plain
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/digitalr00ts/cookiecutter-python
project_urls =
    Bug Tracker = https://github.com/digitalr00ts/cookiecutter-python/issues
    Source Code = https://github.com/digitalr00ts/cookiecutter-python
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
keywords =
    digitalr00ts

[options]
include_package_data = True
install_requires =
    cookiecutter >=1.7,<2
requires-python = >=3.6
setup_requires =
    setuptools_scm[toml] >=3.4
zip_safe = False

[options.extras_require]
test =
    pytest[toml] >=6.0.1,<7
    coverage[toml]
    pytest-cov
    pytest-xdist >=1.34.0,<2
    pytest-cookies
