[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 98
target-version = ['py36','py37','py38']

[tool.coverage]
    [tool.coverage.run]
    branch = true
    source = [ "src/" ]
    omit = [ "tests/*" ]

    [tool.coverage.report]
    precision = 2
    show_missing = true

[tool.isort]
atomic = true
lines_after_imports = 2
lines_between_types = 0
multi_line_output = 3
not_skip = '__init__.py'
default_section = 'THIRDPARTY'
known_first_party = '{{ cookiecutter.project_slug }}'

[tool.pytest.ini_options]
minversion = "6.0.1"
addopts = "--verbosity=2 --cov-report=term --cov-report=html --cov-report=xml --cov"
testpaths = [ "tests" ]

[tools.setuptools_scm]
