# For setuptools configuration see https://setuptools.readthedocs.io.
[metadata]
name = {{ cookiecutter.project_slug }}
version = {{ cookiecutter.version }}
author = {{ cookiecutter.full_name }}
author-email = {{ cookiecutter.email }}
description  = {{ cookiecutter.description }}
description-content-type = text/plain
long_description = file: README.rst
long_description_content_type = text/x-rst
;url =
;project_urls =
;    Bug Tracker =
;    Source Code =
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    digitalr00ts

[options]
include_package_data = True
install_requires =
packages = find:
package_dir =
    = src
requires-python = >=3.5
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
;console_scripts =

[bdist_wheel]
# If your project contains no C extensions and is expected to work on both Python 2 and 3.
# For more details see the user guide at https://wheel.readthedocs.io/.
universal = 1
