# For setuptools configuration see https://setuptools.readthedocs.io.
[metadata]
name = {{ cookiecutter.project_slug }}
author = {{ cookiecutter.full_name }}
author-email = {{ cookiecutter.email }}
description  = {{ cookiecutter.description }}
description-content-type = text/plain
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}
project_urls =
    Bug Tracker = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues
    Source Code = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
keywords =
    digitalr00ts

[options]
include_package_data = True
install_requires =
packages = find:
package_dir =
    = src
requires-python = >=3.6
setup_requires =
    setuptools_scm
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    {{ cookiecutter.project_slug }} = {{ cookiecutter.project_slug }}.cli:main

[options.extras_require]
linting =
    wemake-python-styleguide
    dlint
    flake8-pytest-style
    pylint
    isort[toml]
testing =
    pytest[toml] >=6.0.1,<7
    coverage[toml]
    pytest-cov
    ; pytest-xdist >=1.34.0,<2
